test forward methed and transfer value in the path.

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -540,6 +540,10 @@
                                     <a href="success-cart.html" target="_blank" class="sui-btn btn-bordered btn-danger">加入购物车</a>
                                     <a href="javascript:void(0);" class="sui-btn btn-bordered">收藏</a>
                                 </div>
+                                <div class="operate">
+                                    <a href="success-cart.html" target="_blank" class="sui-btn btn-bordered btn-danger">加入购物车2</a>
+                                    <a th:href="@{/test2(param1='foo',param2='bar')}" class="sui-btn btn-bordered">测试转发forward带参数</a>
+                                </div>
                             </div>
                         </li>
                     </ul>
